REGRESSION(r117929) [Forms] input type=number thinks 0 is not a number https://bugs.webkit.org/show_bug.cgi?id=88208

Reviewed by Kent Tamura.

Source/WebCore:

This patch fixes invalid handling of return value of parseToDoubleForNumberType
in NumberInputType::isAcceptableValue to use isfinite() function for checking
whether specified string is valid number or not. Before r117929, return value
of parseToDoubleForNumberType was bool, but after r117929, it is double.

Test: fast/forms/number/input-number-from-renderer.html

* html/NumberInputType.cpp:
(WebCore::NumberInputType::isAcceptableValue): Use isfinite()

LayoutTests:

This patch introduced function checkIt() for code sharing and added
more test cases to input-number-commit-valid-only.htm

* fast/forms/number/input-number-commit-valid-only-expected.txt: Changed for additional tests.
* fast/forms/number/input-number-commit-valid-only.html: Changed.


Canonical link: https://commits.webkit.org/106047@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119379 268f45cc-cd09-0410-ab3c-d52691b4dbfc